# gps-tracker

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  IMPLEMENTATION_PLAN.md  PICO_FLASHING_GUIDE.md  PROMPT_build.md  PROMPT_plan.md  README.md  example_build_prompt.md  example_plan_prompt.md  loop.sh  pico_sdk_import.cmake  project-planning.md
.claude/: ralph-loop.local.md
specs/: build-and-test.md  data-storage.md  gps-filtering.md  hardware-validation.md  nmea-parser.md  power-management.md  v0.1a.md
src/: data_storage.c  data_storage.h  gps_filter.c  gps_filter.h  main.c  nmea_parser.c  nmea_parser.h  power_mgmt.c  power_mgmt.h
src/hal/: hal.h  hal_mock.c  hal_mock.h  hal_pico.c  hw_config.c
src/lib/: geo_utils.c  geo_utils.h
tests/: CMakeLists.txt  test_data_storage.c  test_geo_utils.c  test_gps_filter.c  test_main.c  test_nmea_parser.c  test_power_mgmt.c
